idea/testData/multiModuleLineMarker/fromExpectedAnnotation/common/common.kt
expect annotation class <!LINE_MARKER("descr='Has actuals in JVM'")!>Ann<!>(
        val <!LINE_MARKER("descr='Has actuals in JVM'")!>x<!>: Int,
        val <!LINE_MARKER("descr='Has actuals in JVM'")!>y<!>: String
)